Style fix in concept plugin to prevent horizontal scrollbar

--- a/plugins/se.infomaker.ximconcept/scss/ximconcept-dialog.scss
+++ b/plugins/se.infomaker.ximconcept/scss/ximconcept-dialog.scss
@@ -1,6 +1,7 @@
 .concept-dialog-component {
     max-height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 10px 25px;
 
     .warning {
